--- a/sources/google-fonts/Cargo.toml
+++ b/sources/google-fonts/Cargo.toml
@@ -2,8 +2,7 @@
 name = "fontpm-source-google-fonts"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0"
 
 [dependencies]
 default-env = "0.1.1"
