--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,6 +11,7 @@ backtrace = { version = "0.3.67", optional = true }
 reqwest = { version = "0.11.13", optional = true }
 toml = "0.5.10"
 semver = "1.0.16"
+thiserror = "1.0.40"
 
 [features]
 default = []
