--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-clap = { version = "4.0.29" }
+clap = { version = "4.2.2" }
 lazy_static = "1.4.0"
 semver = "1.0.16"
 fontpm-api = { path = "../api" }
@@ -18,6 +18,12 @@ dirs = "4.0.0"
 serde = { version = "1.0.151", features = ["derive"] }
 tokio = { version = "1.23.0", features = ["full"] }
 futures = "0.3.25"
+multimap = "0.8.3"
+paris = "1.5.13"
+async-trait = "0.1.68"
+clap_derive = "4.2.0"
+thiserror = "1.0.40"
+path-clean = "1.0.1"
 
 [features]
 default = ["google-fonts"]
