--- a/sources/google-fonts/Cargo.toml
+++ b/sources/google-fonts/Cargo.toml
@@ -11,3 +11,4 @@ log = "0.4.17"
 reqwest = { version = "0.11.13", features = ["json", "gzip", "brotli"] } # We like our compression for this one
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
+sha2 = "0.10.6"
