--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,8 +8,8 @@ license = "Apache-2.0"
 clap = { version = "4.2.2" }
 lazy_static = "1.4.0"
 semver = "1.0.16"
-fontpm-api = { path = "../api" }
-fontpm-source-google-fonts = { path = "../sources/google-fonts", optional = true }
+fontpm-api = { path = "../api", version = "0.1" }
+fontpm-source-google-fonts = { path = "../sources/google-fonts", version = "0.1", optional = true }
 log = "0.4.17"
 termcolor = "1.1.3"
 env_logger = "0.10.0"
