--- a/sources/google-fonts/Cargo.toml
+++ b/sources/google-fonts/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 
 [dependencies]
 default-env = "0.1.1"
-fontpm-api = { path = "../../api", features = ["reqwest-util"] }
+fontpm-api = { path = "../../api", version = "0.1", features = ["reqwest-util"] }
 log = "0.4.17"
 reqwest = { version = "0.11.13", features = ["json", "gzip", "brotli"] } # We like our compression for this one
 serde = { version = "1.0.151", features = ["derive"] }
