change: Update descriptions for packages, update versions of dependencies

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,15 +1,21 @@
 [package]
 name = "fontpm-api"
+description = """
+Internal API for [`fontpm`](https://github.com/tecc/fontpm).
+"""
+repository = "https://github.com/tecc/fontpm"
+keywords = ["fontpm", "fonts"]
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+readme = false
 
 [dependencies]
 async-trait = "0.1.60"
 log = "0.4.17"
 backtrace = { version = "0.3.67", optional = true }
 reqwest = { version = "0.11.13", optional = true }
-toml = "0.5.10"
+toml = "0.7.3"
 semver = "1.0.16"
 thiserror = "1.0.40"
 
