--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,25 +12,25 @@ license = "Apache-2.0"
 readme = "../README.md"
 
 [dependencies]
+async-trait = "0.1.68"
 clap = { version = "4.2.2" }
-lazy_static = "1.4.0"
-semver = "1.0.16"
+clap_derive = "4.2.0"
+dirs = "5.0.0"
+env_logger = "0.10.0"
 fontpm-api = { path = "../api", version = "0.1" }
 fontpm-source-google-fonts = { path = "../sources/google-fonts", version = "0.1", optional = true }
-# log = "0.4.17"
-termcolor = "1.1.3"
-env_logger = "0.10.0"
-toml = "0.7.3"
-dirs = "5.0.0"
-serde = { version = "1.0.151", features = ["derive"] }
-tokio = { version = "1.23.0", features = ["full"] }
 futures = "0.3.25"
+lazy_static = "1.4.0"
 multimap = "0.9.0"
 paris = "1.5.13"
-async-trait = "0.1.68"
-clap_derive = "4.2.0"
-thiserror = "1.0.40"
+path-calculate = "0.1.3"
 path-clean = "1.0.1"
+semver = "1.0.16"
+serde = { version = "1.0.151", features = ["derive"] }
+termcolor = "1.1.3"
+thiserror = "1.0.40"
+tokio = { version = "1.23.0", features = ["full"] }
+toml = "0.7.3"
 
 [features]
 default = ["google-fonts"]
